fixing webpage overflow

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 }
 
 html , body {
-    overflow-x: hidden;
+    overflow-x: none;
+    width: 100%;
 }
 
 a {
